--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wayla - Dolmetscher für Somali & Deutsch</title>
+    <title>Herr Wayla - Dolmetscher für Somali & Deutsch</title>
+    <meta name="google-site-verification" content="googlee0450a1e5b9461e6.html">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Willkommen auf meiner Website</h1>
-    <p>Ich bin Dolmetscher für Somali und Deutsch seit 2015.</p>
+    <p>Ich bin <strong>Herr Wayla</strong>, Dolmetscher für Somali und Deutsch seit 2015.</p>
+    <p>Herr Wayla dolmetscht professionell und zuverlässig.</p>
+    <p>Herr Wayla wohnt in der Nähe von München.</p>
 
     <section>
         <h2>Berufserfahrung</h2>
@@ -44,7 +47,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Wayla. Alle Rechte vorbehalten.</p>
+        <p>&copy; 2025 Herr Wayla. Alle Rechte vorbehalten.</p>
     </footer>
 </body>
 </html>
