--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    img src="image.png"
     <h1>Willkommen auf meiner Website</h1>
     <p>Ich bin <strong>Herr Wayla</strong>, Dolmetscher für Somali und Deutsch seit 2015.</p>
     <p>Herr Wayla dolmetscht professionell und zuverlässig.</p>
