--- a/index.html
+++ b/index.html
@@ -4,51 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Herr Wayla - Dolmetscher für Somali & Deutsch</title>
-    <meta name="google-site-verification" content="googlee0450a1e5b9461e6.html">
+    <meta name="google-site-verification" content="e0450a1e5b9461e6">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    img src="image.png"
-    <h1>Willkommen auf meiner Website</h1>
-    <p>Ich bin <strong>Herr Wayla</strong>, Dolmetscher für Somali und Deutsch seit 2015.</p>
-    <p>Herr Wayla dolmetscht professionell und zuverlässig.</p>
-    <p>Herr Wayla wohnt in der Nähe von München.</p>
 
-    <section>
-        <h2>Berufserfahrung</h2>
+    <header>
+        <img src="image.png" alt="Herr Wayla - Dolmetscher" width="300" height="200">
+        <h1>Willkommen auf meiner Website</h1>
+        <p>Ich bin <strong>Herr Wayla</strong>, Dolmetscher für Somali und Deutsch seit 2015.</p>
+        <p>Professionelle und zuverlässige Dolmetscherdienste.</p>
+        <p>Standort: Nähe München</p>
+    </header>
 
-        <h3>Dolmetscher für Somali und Deutsch (seit 2015)</h3>
-        <p>Seit 2015 arbeite ich als Dolmetscher für die Sprachen <strong>Somali und Deutsch</strong> in verschiedenen Bereichen.</p>
-        <p>Ich habe für <strong>mehrere Organisationen, Institutionen und Unternehmen</strong> gedolmetscht, darunter:</p>
-        <ul>
-            <li>Soziale Einrichtungen und Behörden</li>
-            <li>Medizinische Institutionen</li>
-            <li>Rechtsberatungen und Gerichte</li>
-            <li>Unternehmen mit internationaler Zusammenarbeit</li>
-        </ul>
-        <p>Meine Arbeit umfasst sowohl <strong>simultan als auch konsekutiv</strong> Dolmetschen in Gesprächen, Meetings und offiziellen Veranstaltungen.</p>
+    <main>
+        <section>
+            <h2>Berufserfahrung</h2>
 
-        <h3>Schriftliche Übersetzungen</h3>
-        <p>Zusätzlich zu meinen Dolmetscherdiensten habe ich auch <strong>schriftliche Übersetzungen</strong> für mehrere Unternehmen, Organisationen, Behörden und Gerichte angefertigt.</p>
-        <p>Meine schriftlichen Übersetzungen umfassen:</p>
-        <ul>
-            <li>Verträge und Vereinbarungen</li>
-            <li>Offizielle Dokumente</li>
-            <li>Medizinische und rechtliche Texte</li>
-            <li>Technische und wirtschaftliche Dokumente</li>
-            <li>Übersetzungen für <strong>Amtsgerichte und Landgerichte</strong></li>
-            <li>Behörden und öffentliche Institutionen</li>
-        </ul>
-    </section>
+            <h3>Dolmetscher für Somali und Deutsch (seit 2015)</h3>
+            <p>Seit 2015 arbeite ich als Dolmetscher für die Sprachen <strong>Somali und Deutsch</strong> in verschiedenen Bereichen.</p>
+            <p>Ich habe für zahlreiche Organisationen, Institutionen und Unternehmen gedolmetscht, darunter:</p>
+            <ul>
+                <li>Soziale Einrichtungen und Behörden</li>
+                <li>Medizinische Institutionen</li>
+                <li>Rechtsberatungen und Gerichte</li>
+                <li>Unternehmen mit internationaler Zusammenarbeit</li>
+            </ul>
+            <p>Erfahrung im <strong>simultanen und konsekutiven</strong> Dolmetschen bei Meetings und Veranstaltungen.</p>
 
-    <section>
-        <h2>Kontakt</h2>
-        <p>Email: <a href="mailto:wayla22@hotmail.de">wayla22@hotmail.de</a></p>
-        <p>Telefon: <a href="tel:+4917621404704">0176 2140 4704</a></p>
-    </section>
+            <h3>Schriftliche Übersetzungen</h3>
+            <p>Zusätzlich zu Dolmetscherdiensten biete ich auch <strong>schriftliche Übersetzungen</strong> für:</p>
+            <ul>
+                <li>Verträge und Vereinbarungen</li>
+                <li>Offizielle Dokumente</li>
+                <li>Medizinische und rechtliche Texte</li>
+                <li>Technische und wirtschaftliche Dokumente</li>
+                <li>Gerichtsdokumente für Amts- und Landgerichte</li>
+                <li>Behörden und öffentliche Institutionen</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Kontakt</h2>
+            <p>Email: <a href="mailto:wayla22@hotmail.de">wayla22@hotmail.de</a></p>
+            <p>Telefon: <a href="tel:+4917621404704">+49 176 2140 4704</a></p>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2025 Herr Wayla. Alle Rechte vorbehalten.</p>
     </footer>
+
 </body>
 </html>
