--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <header>
-        <img src="image.png" alt="Herr Wayla - Dolmetscher" width="300" height="200">
+    <header style="text-align: center;">
+        <img src="img.png" alt="Herr Wayla - Dolmetscher" width="300" height="200">
         <h1>Willkommen auf meiner Website</h1>
         <p>Ich bin <strong>Herr Wayla</strong>, Dolmetscher für Somali und Deutsch seit 2015.</p>
         <p>Professionelle und zuverlässige Dolmetscherdienste.</p>
@@ -20,7 +20,6 @@
     <main>
         <section>
             <h2>Berufserfahrung</h2>
-
             <h3>Dolmetscher für Somali und Deutsch (seit 2015)</h3>
             <p>Seit 2015 arbeite ich als Dolmetscher für die Sprachen <strong>Somali und Deutsch</strong> in verschiedenen Bereichen.</p>
             <p>Ich habe für zahlreiche Organisationen, Institutionen und Unternehmen gedolmetscht, darunter:</p>
