--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header style="text-align: center;">
-        <img src="img.png" alt="Herr Wayla - Dolmetscher" width="300" height="200">
+        <img src="img.png" alt="Herr Wayla - Dolmetscher" style="max-width: 100%; height: auto; width: auto; display: block; margin: 0 auto;">
         <h1>Willkommen auf meiner Website</h1>
         <p>Ich bin <strong>Herr Wayla</strong>, Dolmetscher für Somali und Deutsch seit 2015.</p>
         <p>Professionelle und zuverlässige Dolmetscherdienste.</p>
